# rl-navibot

./: .gitignore  README.md  conda_spec.txt  environment.yml  pyproject.toml  requirements.txt  reward_engeneering.md  rl_algorithms.md  wrapper.sh
A_tries/burger_navi_in_house/scripts/: enjoy.sh  select_world_checkpoint_best_in_house.py  train.sh
A_tries/burger_navi_in_world/configs/: train.config.yaml
A_tries/burger_navi_in_world/scripts/: enjoy.sh  eval.sh
app/: main.py  start.sh
app/api/v1/: chat.py  ws.py
app/api/v1/routers/: chat.py
app/api/v1/websockets/: ws.py
app/core/: config.py  topology.py
app/core/services/llm/: llm_service.py
app/core/services/telemetry/: __init_.py  depth_service.py  drg_service.py  map_service.py  rgb_service.py  rl_service.py  robot_service.py  telemetry_service.py
app/frontend/: index.html
app/frontend/public/: _index.html  index.html  try.html
app/harness/_domain/: task_lifecycle.py
app/harness/_graph/: main_graph.py
app/harness/_graph/components/: task_manager.py
app/harness/_graph/dual_circle/: llm_state_graph.py
app/harness/_schema/: llm_goals.py  mission_block_io.py
app/harness/clients/: llm_client.py
app/harness/entrypoints/: brain_main.py
app/harness/graph/: brain_graph.py
app/harness/nodes/: action_node.py  input_node.py  planner_node.py
app/harness/prompts/: brain_prompts.py
app/harness/schemas/: brain_schema.py
app/harness/subgraphs/: mission_executor.py
app/harness/test/: test_yolo_dino.ipynb
app/scripts/: start.sh
docker/: Dockerfile  PullDockerImage.bash
docs/: Notes.md  groundingDINO_usage.md  hf_bert_download.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/core/share/core/: package.dsv  package.ps1  package.sh  package.xml
install/decision/share/decision/: package.sh  package.xml
install/perception/share/perception/: package.sh  package.xml
install/rl_agent/share/rl_agent/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_world/lib/robot_world/: robot_driver  world_manager
install/robot_world/share/robot_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_test  latest_test-result
rl_navibot.egg-info/: PKG-INFO  SOURCES.txt
scripts/: export_environment.sh  fastdds_no_shm.xml
src/_decision/rl_agent/: package.xml
src/_decision/rl_agent/config/: rl.config.yaml
src/_decision/rl_agent/rl_scripts/: enjoy.py  evaluate.py
src/_perception/: try_pixel.ipynb
src/core/: package.xml  setup.py
src/core/core/bridges/: gazebo_ros2_bridge.py  ros2_bridge.py
src/core/core/launch/: full_explore_launch.py  start_explore_with_walls.launch.py
src/core/core/ros2/: master.py
src/core/scripts/: install.sh
src/decision/: package.xml  setup.py
src/decision/decision/rl/: _v1_environments.py  environments.py  rewards.py
src/decision/rl_agent/: package.xml  setup.py
src/decision/rl_agent/config/: rl.config.yaml  rl_env.config.yaml  rl_env.house.config.yaml  rl_hyperparameters.config.yaml  rl_reward.config.yaml
src/decision/scripts/: install.sh
src/decision/test/: test_reset_world.py
src/execution/robot_world/: CMakeLists.txt
src/execution/robot_world/include/robot_world/: robot_driver.hpp  world_manager.hpp
src/execution/robot_world/scripts/: pack.sh  set_turtlebot3.sh
src/execution/robot_world/src/: robot_driver.cpp  world_manager_main.cpp
src/execution/robot_world/test/: test_robot_driver.cpp
src/perception/: package.xml  setup.py  test.ipynb  try_pixel.ipynb
src/perception/perception/slam/: drg.py
src/perception/perception/slam/baselines/: maps.py
src/perception/scripts/: install.sh
src/perception/test/: test_drg.ipynb
tries/burger_navi_in_house/config/: transfer_learning.train.config.yaml
tries/burger_navi_in_house/scripts/: enjoy.sh  select_world_checkpoint_best_in_house.py  select_world_checkpoint_best_in_house_via_tensorboard.ipynb  test_suite_house_30eps.yaml  train.sh
tries/burger_navi_in_world/scripts/: enjoy.sh
(+82 files in other folders)
