<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>SLAM topology extraction (DRG) package</description>
  <maintainer email="chendawww@todo.todo">chendawww</maintainer>
  <license>MIT</license>

  <!-- ★ 关键：指定为 Python 构建类型 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
